--- a/atten/templates/teachers/login.html
+++ b/atten/templates/teachers/login.html
@@ -6,8 +6,8 @@
     <!-- start of login -->
     <section style="min-height: 100vh;" id="login-bg" >
     </section>
-    <section style="height: 100vh;" class="container-fluid d-flex justify-content-center align-items-center">
-        <div class="col-lg-3 p-3 bg-white rounded border shadow" data-aos="zoom-in" data-aos-delay="100">
+    <section style="height: 100vh;" class="container-fluid  d-flex justify-content-center align-items-center">
+        <div class="col-lg-3 col-sm-12 p-3 bg-white rounded border shadow" data-aos="zoom-in" data-aos-delay="100">
             <form method="post">
               {% include "base/messages.html" %}
               {% csrf_token %}
