--- a/atten/templates/base/not_to_access.html
+++ b/atten/templates/base/not_to_access.html
@@ -8,7 +8,7 @@
         font-family: sans-serif;
         text-shadow: 0px 0px 10px black;
         color: #fff;
-        backdrop-filter: blur(10px);
+        backdrop-filter: blur(0px);
         background: url(../../static/img/clg-img.jpg) no-repeat center center;
         background-size: cover;
         position: relative;
@@ -23,7 +23,7 @@
         right: -100px;
         bottom: -100px;
         background: inherit; 
-        filter: blur(10px);
+        filter: blur(5px);
         z-index: -1;
     }
     .not-to-access h1 {
@@ -32,15 +32,38 @@
         font-size: 3em;
     }
 
-    .not-to-access p {
+    /* .not-to-access p {
         font-size: 20px;
         padding: 10px 0px;
         text-shadow: 1px 1px 20px rgb(220 53 69);
         color: #fff;
         font-weight: 800;
+    } */
+
+    .message-box div{
+        /* border: 1px solid rgba(220, 53, 69, .3); */
+        border: 0;
+        padding: 15px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px rgba(220, 53, 69,) inset;
+        background-color: rgba(220, 53, 69, .5);
+        color: #fff !important;
+        text-shadow: 1px 1px 10px rgb(0, 0, 0);
+        font-size: 20px;
+        font-weight: 900 !important;
+        letter-spacing: .5px;
+    }
+
+    .div-container {
+        background-color: #0006;
+        backdrop-filter: blur(10px);
     }
 
     @media (max-width:1000px) {
+        .message-box div{
+            /* color: white !important; */
+
+        }
         .not-to-access {
             text-align: start;
         }
@@ -52,14 +75,22 @@
 
 </style>
 
-<section style="min-height: 100vh;" class="not-to-access container-fluid bg-dark d-flex flex-column justify-content-center align-items-center">
-    <div class="container-fluid mx-auto bg-dark shadow-sm p-3 rounded">
-        <h1  >
-            Oops! This page is not available. <br>
-        </h1>
-        <p class="text-danger">
-            Maybe you're not allowed to access this page! Please contract with the adimnistrator.
-        </p>
+<section style="min-height: 100vh;" class="not-to-access container-fluid d-flex flex-column justify-content-center align-items-center">
+    <div class="container div-container mx-auto shadow-sm p-3 rounded">
+        <div>
+            <h1  >
+                Oops! This page is not available. <br>
+            </h1>
+        </div>
+        <div class="message-box d-flex justify-content-center flex-column align-items-center">
+        {% if messages %}
+            {% for message in messages %}
+                <div>
+                    {{message}}
+                </div>
+                {% endfor %}
+        {% endif %}
+        </div>
     </div>
     
 </section>
