--- a/atten/templates/base/not_to_access.html
+++ b/atten/templates/base/not_to_access.html
@@ -45,9 +45,9 @@
         border: 0;
         padding: 15px;
         border-radius: 10px;
-        box-shadow: 0px 0px 10px rgba(220, 53, 69,) inset;
+        box-shadow: 0px 0px 20px rgba(220, 53, 69) inset;
         background-color: rgba(220, 53, 69, .5);
-        color: #fff !important;
+        color:red !important;
         text-shadow: 1px 1px 10px rgb(0, 0, 0);
         font-size: 20px;
         font-weight: 900 !important;
