--- a/atten/templates/teachers/teachers.html
+++ b/atten/templates/teachers/teachers.html
@@ -25,7 +25,7 @@
 
     <section id="add-section" class="border rounded shadow">
         <h2 class="text-center my-2">Enter Teacher's Info.</h2>
-        <form class="py-3" action="{% url 'add_user' %}" method="post">
+        <form class="py-3" action="#" method="post">
 
             {% csrf_token %}
             <!-- input form -->
