--- a/atten/static/css/index.css
+++ b/atten/static/css/index.css
@@ -62,6 +62,28 @@ button:hover {
     color: black;
 }
 
+.btn1 {
+    background-color: #fff1;
+    backdrop-filter: blur(5px);
+    color: #fff;
+    transition: .5s;
+}
+
+.btn1:hover {
+    background-color: #fff;
+}
+
+.danger-btn {
+    background-color: rgba(220, 53, 70, 0.5);
+    backdrop-filter: blur(5px);
+    color: #fff;
+    transition: .5s;
+}
+
+.btn-cancel:hover {
+    background-color: #dc3545;
+}
+
 @media (max-width:899px) {
     button {
         padding: 10px 20px;
@@ -79,41 +101,13 @@ button:hover {
 
 /* Login form section */
 
-#login-bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    min-height: 100vh;
-    z-index: -1;
-    object-fit: cover;
-    background: url(../img/clg-img.jpg) no-repeat center center;
-    background-size: cover;
-}
-
-/* #login-bg {
-    z-index: 2;
-} */
-
-#login-bg::before {
-    content: '';
-    position: absolute;
-    top: -100px;
-    left: -100px;
-    right: -100px;
-    bottom: -100px;
-    background: inherit; 
-    filter: blur(10px);
-    z-index: -1;
-}
 
 /* Navbar section */
 
 
 
 .navbar {
-    background-color: #6edff6 !important;
+    background-color: rgba(110, 223, 246) !important;
     position: fixed;
     top:0;
     left: 0 ;
@@ -132,7 +126,7 @@ button:hover {
     position: fixed;
     height: 50px;
     right: 0;
-    background-color: rgba(111, 223, 246) !important;
+    background-color: rgba(111, 223, 246, .9) !important;
     box-shadow: 2px 0px 5px rgb(0, 0, 0) !important;
 }
 
