--- a/atten/templates/base/base.html
+++ b/atten/templates/base/base.html
@@ -9,6 +9,10 @@
     <link href="{% static 'css/aos.css' %}" rel="stylesheet">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/index.css' %}" rel="stylesheet">
+    <link href="{% static 'css/home.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/home_slider.css' %}">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/add_form.css' %}">
 
     <title> {{page}} </title>
 </head>
@@ -23,10 +27,62 @@
                     <div class="d-flex align-items-center {% if request.path == '/' or request.path == '' %} div-active {%endif%} ">
                         <a href="{% url 'home' %}">Home</a>
                     </div>
+
+                    {% if request.user.is_authenticated %}
+        
+                    <div class=" info-div ">
+                        <div style="text-align: left !important;" class="info {% if '/collage/' in request.path %} div-active-info {% endif %}">
+                            <span>Collages <i class="fa-solid fa-chevron-down"></i> </span>
+                            <div class="info-after">
+                                <div class="mt-1 {% if '/add-collage/' in request.path %} div-active {% endif %}">
+                                    <a class="link" href="{% url 'add_collage' %}">Add Collage</a>
+                                </div>
+
+                                <div class="mt-1 ">
+                                    <a class="link" href="#">Collages</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    {% else %}
+                    <div class="d-flex align-items-center {% if '/collage/' in request.path %} div-active {% endif %}">
+                        <a href="#">Collages</a>
+                    </div>
+                    {% endif %}
+        
+
+                    {% if request.user.is_superuser %}
+        
+                        <div class=" info-div ">
+                            <div style="text-align: left !important;" class="info {% if '/teachers/' in request.path %} div-active-info {% endif %}">
+                                <span>Teachers <i class="fa-solid fa-chevron-down"></i> </span>
+                                <div class="info-after">
+                                    <div  class="my-1 {% if '/teachers-info/' in request.path %} div-active {% endif %}">
+                                        <a class="link" href="{% url 'teachers' %}">Teachers Info</a>
+                                    </div>
+                                    <div class="my-1 {% if '/add-teacher/' in request.path %} div-active {% endif %}">
+                                        <a class="link" href="{% url 'add_teacher' %}">Add Teacher</a>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+
+                    {% else %}
         
                     <div class="d-flex align-items-center {% if '/teachers/' in request.path %} div-active {% endif %}">
                         <a href="{% url 'teachers' %}">Teachers Info</a>
                     </div>
+
+                    {% endif %}
+
+
+                    <div class="d-flex align-items-center {% if '/departments/' in request.path %} div-active {%endif%}">
+                        <a href="{% url 'departments' %}">Departments</a>
+                    </div>
+                    
 
                     {% if request.user.is_authenticated %}
         
@@ -34,10 +90,10 @@
                         <div style="text-align: left !important;" class="info {% if '/students/' in request.path %} div-active-info {% endif %}">
                             <span>Students <i class="fa-solid fa-chevron-down"></i> </span>
                             <div class="info-after">
-                                <div  class="mt-1 {% if '/student-attendence/' in request.path %} div-active {% endif %}">
+                                <div  class="my-1 {% if '/student-attendence/' in request.path %} div-active {% endif %}">
                                     <a class="link" href="{% url 'attendence' %}">Attendence</a>
                                 </div>
-                                <div class="mt-1 ">
+                                <div class="my-1 ">
                                     <a class="link" href="#">Update Student Info</a>
                                 </div>
 
@@ -49,11 +105,9 @@
                     </div>
 
                     {% endif %}
-        
-                    <div class="d-flex align-items-center {% if '/departments/' in request.path %} div-active {%endif%}">
-                        <a href="{% url 'departments' %}">Departments</a>
-                    </div>
-        
+
+
+
                     <div class="d-flex align-items-center {% if '/subjects/' in request.path %} div-active {%endif%}">
                         <a href="{% url 'subjects' %}">Subject</a>
                     </div>
@@ -107,6 +161,7 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/aos.js' %}"></script>
     <script src="{% static 'js/index.js' %}"></script>
+    <script src="{% static '/js/home_slider.js' %}"></script>
     <script>
         AOS.init();
     </script>
