--- a/atten/templates/home/home.html
+++ b/atten/templates/home/home.html
@@ -2,40 +2,55 @@
 {% load static %}
 {% block start %}
 
-    <!-- start of collage info -->
-    <section style=" min-height: 100vh;" class="clginfo container bg-light d-flex flex-column  justify-content-center align-items-center">
-        <div class="col-lg-12">
-            <div class="col-lg-12 text-center mb-5" data-aos="zoom-in" data-aos-delay="100">
-                <h1>
-                    Image Polytechnic Institute
-                </h1>
-            </div>
 
-            <div class="col-lg-12 row">
-                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
-                    <img class="w-100 rounded" src="../static/img/clg-img.jpg" alt="">
+<div tyle class="slider mx-auto">
+
+    {% if collages %}
+
+
+    <div class="list">
+
+        {% for collage in collages %}
+
+        <div class="item">
+            <img src="media/{{collage.image}}" alt="">
+
+            <div class="content">
+                <div class="title">{{ collage.name }}</div>
+                <div class="type text-end">{{ collage.destrict }}</div>
+                <div class="description my-2">
+                    {{ collage.description }}
                 </div>
-                <div class="col-lg-6">
-                    <h2 data-aos="fade-up" data-aos-delay="400">Heading</h2>
-
-                    <p class="mt-5" data-aos="fade-up" data-aos-delay="500">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti et laudantium, molestias
-                        quas nesciunt veniam voluptates, provident illum ipsa eius sunt accusantium ratione, numquam mollitia tempore? 
-                        Exercitationem dolores veniam dolore excepturi delectus. Quae hic perspiciatis quod laborum obcaecati ut commodi aperiam 
-                        facilis. A accusamus eum veritatis doloribus quibusdam reprehenderit fugiat laudantium nisi, inventore, modi suscipit sit 
-                        optio! Atque amet nemo culpa officiis numquam dolor fuga iusto. Ad quae voluptate illo soluta dolor assumenda, ex quis 
-                        veritatis adipisci deleniti nobis consectetur blanditiis quia voluptatum sequi ducimus corrupti veniam saepe 
-                        odit possimus fugit distinctio ullam quibusdam. Repellendus optio quas voluptatem nemo eaque.
-                    </p>
-
-                    <p data-aos="fade-up" data-aos-delay="600">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde fugit autem iusto ad quis, neque quod eum nihil consequuntur 
-                        animi, sit eius optio commodi nostrum sint adipisci officia quas quisquam.
-                    </p>
+                <div class="button">
+                    <button>SEE MORE</button>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- End of collage info -->
+
+        {% endfor %}
+
+    </div>
+
+
+    <div class="thumbnail">
+
+        {% for collage in collages %}
+        <div class="item">
+            <img src="media/{{ collage.image }}" alt="">
+        </div>
+        {% endfor %}
+
+
+    </div>
+
+
+    <div class="nextPrevArrows mt-3">
+        <button class="prev"> < </button>
+        <button class="next"> > </button>
+    </div>
+
+    {% endif %}
+
+</div>
 
 {% endblock %}
