--- a/atten/templates/teachers/login.html
+++ b/atten/templates/teachers/login.html
@@ -2,12 +2,17 @@
 {% load static %}
 {% block start %}
 
+<style>
+ 
+
+</style>
+
 
     <!-- start of login -->
-    <section style="min-height: 100vh;" id="login-bg" >
-    </section>
-    <section style="height: 100vh;" class="container-fluid  d-flex justify-content-center align-items-center">
-        <div class="col-lg-3 col-sm-12 p-3 bg-white rounded border shadow" data-aos="zoom-in" data-aos-delay="100">
+    <!-- <section style="min-height: 100vh;" id="login-bg" >
+    </section> -->
+    <section style="min-height: 100vh;" class="container-fluid  d-flex justify-content-center align-items-center" id="login-bg">
+        <div class="col-lg-3 col-sm-12 p-3 bg-white rounded shadow main-div" data-aos="zoom-in" data-aos-delay="100">
             <form method="post">
               {% include "base/messages.html" %}
               {% csrf_token %}
@@ -21,7 +26,7 @@
                 </div>
 
                 <div class="col-lg-12 text-end mt-3">
-                    <button type="submit">Login</button>
+                    <button class="btn1" type="submit">Login</button>
                 </div>
               </form>
         </div>
